TEST_PROGRAMS/INVALID/01/#32.1.go
package main

// unary bitwise_and is not supported

func main (x,y int, z float64) {
  var foo int;
  foo = &3;
}
